# tree-sitter-jasmin

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  example_file.jazz  flake.nix  go.mod  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-jasmin.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jasmin/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJasminTests/: TreeSitterJasminTests.swift
queries/: folds.scm  highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: exec.txt  expressions.txt  function_definition.txt  global.txt  instructions.txt  libjade.txt  namespace.txt  param.txt  require.txt  type_alias.txt
test/highlight/: chacha.jazz
test/tags/: map.jazz
