[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-jasmin"
description = "Treesitter grammar for Jasmin, a language designed for writing high-assurance and high-speed cryptography"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "jasmin"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Tom Béné", email = "tom@fantomebeig.net" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://git.sr.ht/~fantomebeignet/tree-sitter-jasmin"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
